--- a/website/pages/docs/synced-folders/nfs.mdx
+++ b/website/pages/docs/synced-folders/nfs.mdx
@@ -247,7 +247,7 @@ describes how to possibly identify the root of the issue.
 * Check status of nfs-kernel-server `systemctl status nfs-kernel-server` for
   errors like `exportfs: Failed to stat /path : No such file or directory`. 
   Then create the missing directory or remove the line from `/etc/exports` 
-  and restart the nfs-kerne-server `sysctemctl start nfs-kernel-server`
+  and restart the nfs-kernel-server `sysctemctl start nfs-kernel-server`
 
 * If using Mac, ensure that `/sbin/nfsd` has been given Full Disk Access.
 
